--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NaganoCake</title>
+    <title>LOGO</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,65 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+          <a class="navbar-brand" href="/">
+            <span>Bookers</span>
+          </a>
+         <button class="navbar-toggler" type="button" date-toggle="collapse" data-target="#navbarNavDropdpwn" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+             <% if user_signed_in? %>
+                <li>
+                 <%= link_to "商品一覧", user_path(current_user), class:"fas fa-home nav-link text-light"  %>
+                </li>
+                <li>
+                 <%= link_to "会員一覧",users_path, class:"fas fa-users nav-link text-light" %>
+                </li>
+                <li>
+                 <%= link_to "注文履歴一覧",books_path, class:"fas fa-book-open nav-link text-light" %>
+                </li>
+                <li>
+                 <%= link_to "ジャンル一覧", destroy_user_session_path, class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+                </li>
+                <li>
+                  <%= link_to "ログアウト",  , class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+              <% else %>
+             　 <li>
+                 <%= link_to "About", root_path, class:"fas fa-home nav-link text-light" %>
+                </li>
+                <li>
+                 <%= link_to "商品一覧", home_about_path, class:"fas fa-link nav-link text-light" %>
+                </li>
+                <li>
+                 <%= link_to "新規登録", new_user_registration_path, class:"fas fa-user-plus nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "ログイン", new_user_session_path, class:"fas fa-sign-in-alt nav-link text-light" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+   <div class="Notification">
+ <% flash.each do |key, value| %>
+ <%= content_tag :div, value, class: key %>
+ <% end %>
+</div>
     <%= yield %>
+    <footer>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="mx-auto">
+                    <p>CopyRight Infratop.inc</p>
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
