--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,33 +21,33 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-             <% if user_signed_in? %>
+             <% if admin_signed_in? %>
                 <li>
-                 <%= link_to "商品一覧", user_path(current_user), class:"fas fa-home nav-link text-light"  %>
+                 <%= link_to "商品一覧", admin_items_path, class:"fas fa-home nav-link text-light"  %>
                 </li>
                 <li>
                  <%= link_to "会員一覧",users_path, class:"fas fa-users nav-link text-light" %>
                 </li>
                 <li>
-                 <%= link_to "注文履歴一覧",books_path, class:"fas fa-book-open nav-link text-light" %>
+                 <%= link_to "注文履歴一覧",admin_homes_top_path, class:"fas fa-book-open nav-link text-light" %>
                 </li>
                 <li>
-                 <%= link_to "ジャンル一覧", destroy_user_session_path, class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+                 <%= link_to "ジャンル一覧", admin_genres_path, class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
                 </li>
                 <li>
-                  <%= link_to "ログアウト",  , class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+                  <%= link_to "ログアウト", destroy_admin_session_path , class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
               <% else %>
              　 <li>
-                 <%= link_to "About", root_path, class:"fas fa-home nav-link text-light" %>
+                 <%= link_to "About", public_homes_about_path , class:"fas fa-home nav-link text-light" %>
                 </li>
                 <li>
-                 <%= link_to "商品一覧", home_about_path, class:"fas fa-link nav-link text-light" %>
+                 <%= link_to "商品一覧", public_items_path , class:"fas fa-link nav-link text-light" %>
                 </li>
                 <li>
-                 <%= link_to "新規登録", new_user_registration_path, class:"fas fa-user-plus nav-link text-light" %>
+                 <%= link_to "新規登録", new_customer_registration_path, class:"fas fa-user-plus nav-link text-light" %>
                 </li>
                 <li>
-                  <%= link_to "ログイン", new_user_session_path, class:"fas fa-sign-in-alt nav-link text-light" %>
+                  <%= link_to "ログイン", new_customer_session_path, class:"fas fa-sign-in-alt nav-link text-light" %>
                 </li>
               <% end %>
             </ul>
