--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
                  <%= link_to "商品一覧", admin_items_path, class:"fas fa-home nav-link text-light"  %>
                 </li>
                 <li>
-                 <%= link_to "会員一覧",users_path, class:"fas fa-users nav-link text-light" %>
+                 <%= link_to "会員一覧",admin_customers_path, class:"fas fa-users nav-link text-light" %>
                 </li>
                 <li>
                  <%= link_to "注文履歴一覧",admin_homes_top_path, class:"fas fa-book-open nav-link text-light" %>
