--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+     <th>商品ID</th>
+     <th>商品名</th>
+     <th>税抜価格</th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @items.each do |item|%>
+      <tr>
+        <td>
+          <%= item.id %>
+        </td>
+        <td>
+          <%= link_to admin_item_path(item) do %>
+            <%= attachment_image_tag item, :image,format:'jpeg', :size=>'50x50' %>
+          <% end %>
+        </td>
+        <td>
+          <%= item.prise %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
