--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>画像投稿フォーム</h1>
-<%= form_with model:@item, url: admin_item_path(@item), local:true do |f| %>
+<%= form_with model:@item, url: admin_items_path, local:true do |f| %>
   <h4>商品画像</h4>
   <%= f.attachment_field :image %>
   <h4>商品名</h4>
