--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div>
+  <%= attachment_image_tag @item, :image %>
+  <p>商品名：<%= @item.name %></p>
+  <p>商品説明：<%= @item.introduction %></p>
+  <p>税込価格（税抜価格）：<%= @item.prise %></p>
+  <%= link_to "編集", edit_admin_item_path, class:"fas fa-home nav-link"  %>
+</div>
