--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div>
+  <h3><%= @customer.name %>さんの会員情報編集</h3>
+</div>
+<%= form_with model: @customer, url: admin_customer_path(@customer), local: true do |f| %>
+ <table class="table table-hover table-inverse">
+   <tr>
+     <th>会員ID</th>
+     <td><%= @customer.id %></td>
+   </tr>
+   <tr>
+     <th>氏名</th>
+     <td><%= f.text_field :@customer.last_name %><%= f.text_field :@customer.first_name %></td>
+    </tr>
+    <tr>
+     <th>フリガナ</th>
+     <td><%= f.text_field :@customer.last_name_kana %><%= f.text_field :@customer.first_name_kana %></td>
+    </tr>
+    <tr>
+     <th>郵便番号</th>
+     <td><%= f.text_field :@customer.postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td><%= f.text_field :@customer.address %></td>
+    </tr>
+    <tr>
+     <th>電話番号</th>
+     <td><%= f.text_field :@customer.telephone_number %></td>
+    </tr>
+    <tr>
+     <th>メールアドレス</th>
+     <td><%= f.text_field :@customer.email %></td>
+    </tr>
+    <%= f.submit '変更を保存' %>
+  </table>
+<% end %>
