--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<table class="table table-hover table-inverse">
+  <h1>会員一覧</h1>
+  <thead>
+   <tr>
+     <th>会員ID</th>
+     <th>氏名</th>
+     <th>メールアドレス</th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @customers.each do |customer|%>
+      <tr>
+        <td>
+          <%= customer.id %>
+        </td>
+        <td>
+          <%= link_to admin_customer_path(customer) do %>
+            <%= attachment_image_tag customer, :customer,format:'jpeg', :size=>'50x50' %>
+          <% end %>
+        </td>
+        <td>
+          <%= customer.email %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
