--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div>
+  <h3><%= @customer.name %>さんの会員詳細</h3>
+</div>
+<table class="table table-hover table-inverse">
+   <tr>
+     <th>会員ID</th>
+     <td><%= @customer.id %></td>
+   </tr>
+   <tr>
+     <th>氏名</th>
+     <td><%= @customer.last_name %><%= @customer.first_name %></td>
+    </tr>
+    <tr>
+     <th>フリガナ</th>
+     <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
+    </tr>
+    <tr>
+     <th>郵便番号</th>
+     <td><%= @customer.postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td><%= @customer.address %></td>
+    </tr>
+    <tr>
+     <th>電話番号</th>
+     <td><%= @customer.telephone_number %></td>
+    </tr>
+    <tr>
+     <th>メールアドレス</th>
+     <td><%= @customer.email %></td>
+    </tr>
+    <%= link_to "編集する", edit_admin_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
+    <%= link_to "注文履歴一覧を見る", admin_item_path(@customer), class:"fas fa-home nav-link text-light"  %>
+</table>
