--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,25 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<table class="table table-hover table-inverse">
+  <h1>注文履歴一覧</h1>
+  <thead>
+   <tr>
+     <th>購入日時</th>
+     <th>購入者</th>
+     <th>注文個数</th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order|%>
+      <tr>
+        <td>
+          <%= order.created_at %>
+        </td>
+        <td>
+          <%= order.customer.last_name %><%= order.customer.first_name %>
+        </td>
+        <td>
+          <%= order.order_detail.amount %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
