--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<h1>商品編集</h1>
+<!-- form_with部分 -->
+<%= form_with model: @item, url: admin_item_path(@item), local: true do |f| %>
+  <h4>商品画像</h4>
+  <%= f.attachment_field :image %>
+  <h4>商品名</h4>
+  <%= f.text_field :name %>
+  <h4>商品説明</h4>
+  <%= f.text_area :introduction %>
+  <h4>税抜価格</h4>
+  <%= f.text_field :prise %>円
+  <%= f.submit '変更を保存' %>
+<% end %>
