--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,4 +1,5 @@
 <table class="table table-hover table-inverse">
+  <h1>商品一覧</h1>
   <thead>
    <tr>
      <th>商品ID</th>
@@ -14,7 +15,7 @@
         </td>
         <td>
           <%= link_to admin_item_path(item) do %>
-            <%= attachment_image_tag item, :image,format:'jpeg', :size=>'50x50' %>
+            <%=  item.name %>
           <% end %>
         </td>
         <td>
