--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= attachment_image_tag @item, :image %>
+  <%= attachment_image_tag @item, :image, :fill, 60, 60 %>
   <p>商品名：<%= @item.name %></p>
   <p>商品説明：<%= @item.introduction %></p>
   <p>税込価格（税抜価格）：<%= @item.prise %></p>
