--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
           <a class="navbar-brand" href="/">
-            <span>Bookers</span>
+            <span>LOGO</span>
           </a>
          <button class="navbar-toggler" type="button" date-toggle="collapse" data-target="#navbarNavDropdpwn" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
