--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,32 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<h4>ようこそ、ながのCAKEへ！</h4>
+<p>このサイトは、ケーキ販売のECサイトになります。</p>
+<p>会員でない方も商品の閲覧はできますが、</p>
+<p>購入には会員登録が必要になります。</p>
+
+<table class="table table-hover table-inverse">
+  <h1>新着商品</h1>
+  <thead>
+   <tr>
+     <th>会員ID</th>
+     <th>氏名</th>
+     <th>メールアドレス</th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @customers.each do |customer|%>
+      <tr>
+        <td>
+          <%= customer.id %>
+        </td>
+        <td>
+          <%= link_to admin_customer_path(customer) do %>
+            <%= attachment_image_tag customer, :customer,format:'jpeg', :size=>'50x50' %>
+          <% end %>
+        </td>
+        <td>
+          <%= customer.email %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
