--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,30 +3,9 @@
 <p>会員でない方も商品の閲覧はできますが、</p>
 <p>購入には会員登録が必要になります。</p>
 
-<table class="table table-hover table-inverse">
   <h1>新着商品</h1>
-  <thead>
-   <tr>
-     <th>会員ID</th>
-     <th>氏名</th>
-     <th>メールアドレス</th>
-   </tr>
-  </thead>
-  <tbody>
-    <% @customers.each do |customer|%>
-      <tr>
-        <td>
-          <%= customer.id %>
-        </td>
-        <td>
-          <%= link_to admin_customer_path(customer) do %>
-            <%= attachment_image_tag customer, :customer,format:'jpeg', :size=>'50x50' %>
-          <% end %>
-        </td>
-        <td>
-          <%= customer.email %>
-        </td>
-      </tr>
+    <% @items.each do |item|%>
+        <div><%= attachment_image_tag item, :image, :fill, 60, 60 %></div>
+        <div><%= item.name %></div>
+        <div><%= item.prise %></div>
     <% end %>
-  </tbody>
-</table>
