--- a/app/views/publics/registrations/new.html.erb
+++ b/app/views/publics/registrations/new.html.erb
@@ -1,29 +1,47 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
   <%= render "publics/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <table class="table table-hover table-inverse">
+   <tr>
+     <th>名前</th>
+     <td>(姓)<%= f.text_field :last_name %>　（名）<%= f.text_field :first_name %></td>
+    </tr>
+    <tr>
+     <th>フリガナ</th>
+     <td>(セイ)<%= f.text_field :last_name_kana %> (メイ)<%= f.text_field :first_name_kana %></td>
+    </tr>
+    <tr>
+     <th>メールアドレス</th>
+     <td><%= f.text_field :email %></td>
+    </tr>
+    <tr>
+     <th>郵便番号（ハイフンなし）</th>
+     <td>　<%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td>　<%= f.text_field :address %></td>
+    </tr>
+    <tr>
+     <th>電話番号（ハイフンなし）</th>
+     <td><%= f.text_field :telephone_number %></td>
+    </tr>
+    <tr>
+     <th>パスワード(６文字以上)</th>
+     <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+    </tr>
+    <tr>
+      <th>パスワード(確認用)</th>
+      <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+    </tr>
+    <tr>
+      <th></th>
+      <td><%= f.submit '新規登録' %></td>
+    </tr>
+  </table>
 <% end %>
 
-<%= render "publics/shared/links" %>
+<h2>既に登録済みの方</h2>
+<%= link_to "こちら", new_customer_session_path %>からログインしてください。
