--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<h3>マイページ</h3>
+
+<span>登録情報</span>
+<%= link_to "編集する", edit_customer_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
+<table class="table table-hover table-inverse">
+   <tr>
+     <th>氏名</th>
+     <td><%= @customer.last_name %><%= @customer.first_name %></td>
+   </tr>
+   <tr>
+     <th>カナ</th>
+     <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
+    </tr>
+    <tr>
+     <th>郵便番号</th>
+     <td><%= @customer.postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td><%= @customer.address %></td>
+    </tr>
+    <tr>
+     <th>電話番号</th>
+     <td><%= @customer.telephone_number %></td>
+    </tr>
+    <tr>
+     <th>メールアドレス</th>
+     <td><%= @customer.email %></td>
+    </tr>
+</table>
+<table>
+  <tr>
+    <th>配送先</th>
+    <td><%= link_to "一覧を見る", public_addresses_path, class:"fas fa-home nav-link text-light"  %></td>
+  </tr>
+  <tr>
+    <th>注文履歴</th>
+   <td><%= link_to "一覧を見る", public_orders_path, class:"fas fa-home nav-link text-light"  %></td>
+  </tr>
+</table>
