新規登録コントローラー

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -6,27 +6,27 @@
   <table class="table table-hover table-inverse">
    <tr>
      <th>名前</th>
-     <td>(姓)<%= f.text_field :@customer.last_name %>　（名）<%= f.text_field :@customer.first_name %></td>
+     <td>(姓)<%= f.text_field :last_name %>　（名）<%= f.text_field :first_name %></td>
     </tr>
     <tr>
      <th>フリガナ</th>
-     <td>（セイ）<%= f.text_field :@customer.last_name_kana %> （メイ）<%= f.text_field :@customer.first_name_kana %></td>
+     <td>（セイ）<%= f.text_field :last_name_kana %> （メイ）<%= f.text_field :first_name_kana %></td>
     </tr>
     <tr>
      <th>メールアドレス</th>
-     <td><%= f.text_field :@customer.email %></td>
+     <td><%= f.text_field :email %></td>
     </tr>
     <tr>
      <th>郵便番号（ハイフンなし）</th>
-     <td><%= f.text_field :@customer.postal_code %></td>
+     <td><%= f.text_field :postal_code %></td>
     </tr>
     <tr>
      <th>住所</th>
-     <td><%= f.text_field :@customer.address %></td>
+     <td><%= f.text_field :address %></td>
     </tr>
     <tr>
      <th>電話番号（ハイフンなし）</th>
-     <td><%= f.text_field :@customer.telephone_number %></td>
+     <td><%= f.text_field :telephone_number %></td>
     </tr>
     <tr>
      <th>パスワード(６文字以上)</th>
