--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,20 @@
                 </li>
                 <li>
                   <%= link_to "ログアウト", destroy_admin_session_path , class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+                </li>
+             <% elsif customer_signed_in? %>
+                <li>
+                 <%= link_to "マイページ", public_customer_path(current_customer), class:"fas fa-home nav-link text-light"  %>
+                </li>
+                <li>
+                 <%= link_to "商品一覧",public_items_path, class:"fas fa-users nav-link text-light" %>
+                </li>
+                <li>
+                 <%= link_to "カート",public_cart_items_path, class:"fas fa-book-open nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "ログアウト", destroy_customer_session_path , class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+                </li>
               <% else %>
              　 <li>
                  <%= link_to "About", public_homes_about_path , class:"fas fa-home nav-link text-light" %>
