--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <h3>マイページ</h3>
 
 <span>登録情報</span>
-<%= link_to "編集する", edit_customer_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
+<%= link_to "編集する", edit_public_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
 <table class="table table-hover table-inverse">
    <tr>
      <th>氏名</th>
@@ -31,10 +31,10 @@
 <table>
   <tr>
     <th>配送先</th>
-    <td><%= link_to "一覧を見る", public_addresses_path, class:"fas fa-home nav-link text-light"  %></td>
+    <td><%= link_to "一覧を見る", public_addresses_path %></td>
   </tr>
   <tr>
     <th>注文履歴</th>
-   <td><%= link_to "一覧を見る", public_orders_path, class:"fas fa-home nav-link text-light"  %></td>
+   <td><%= link_to "一覧を見る", public_orders_path %></td>
   </tr>
 </table>
