--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h3><%= @customer.name %>さんの会員情報編集</h3>
+  <h3><%= @customer.name %>会員情報編集</h3>
 </div>
 <%= form_with model: @customer, url: admin_customer_path(@customer), local: true do |f| %>
  <table class="table table-hover table-inverse">
