--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <h3>マイページ</h3>
 
 <span>登録情報</span>
-<%= link_to "編集する", edit_public_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
+<%= link_to "編集する", edit_public_customer_path(@customer) %>
 <table class="table table-hover table-inverse">
    <tr>
      <th>氏名</th>
