--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -5,4 +5,4 @@
 <p>退会する場合は、「退会する」をクリックしてください。</p>
 
 <%= link_to "退会しない", public_customer_path(current_customer) %>
-<%= link_to "退会する", public_customer_path(current_customer) %>
+<%= link_to "退会する", public_customers_withdraw_path, method: :patch, data:{confirm: "本当に退会しますか？"} %>
