--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div>
+  <h3>配送先編集</h3>
+</div>
+<%= form_with model: @address, url: public_address_path(@address), local: true do |f| %>
+ <table class="table table-hover table-inverse">
+    <tr>
+     <th>郵便番号(ハイフンなし)</th>
+     <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td><%= f.text_field :address %></td>
+    </tr>
+    <tr>
+     <th>宛名</th>
+     <td><%= f.text_field :name %></td>
+    </tr>
+    <tr>
+     <th></th>
+     <td><%= f.submit '変更内容を保存' %> </td>
+    </tr>
+  </table>
+<% end %>
