--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,50 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<div>
+  <h3>配送先登録/一覧</h3>
+</div>
+<%= form_with model: @address, url: public_addresses_path, local: true do |f| %>
+ <table class="table table-hover table-inverse">
+    <tr>
+     <th>郵便番号(ハイフンなし)</th>
+     <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td><%= f.text_field :address %></td>
+    </tr>
+    <tr>
+     <th>宛名</th>
+     <td><%= f.text_field :name %></td>
+    </tr>
+    <tr>
+     <th></th>
+     <td><%= f.submit '新規登録' %> </td>
+    </tr>
+  </table>
+<% end %>
+<table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+     <th>郵便番号</th>
+     <th>住所</th>
+     <th>宛名</th>
+     <th></th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @addresses.each do |address|%>
+      <tr>
+        <td>
+          <%= address.postal_code %>
+        </td>
+        <td>
+          <%= address.address %>
+        </td>
+        <td>
+          <%= address.name %>
+        </td>
+        <td>
+         <%= link_to "編集する", edit_public_address_path(address) %> <%= link_to "削除する",public_address_path(address), method: :delete %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
