--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div>
+  <h3>ショッピングカート</h3>
+</div>
+<table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+     <th>商品名</th>
+     <th>単価(税込)</th>
+     <th>数量</th>
+     <th>小計</th>
+     <th></th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @cart_items.each do |cart_item|%>
+      <tr>
+        <td>
+          <%= attachment_image_tag cart_item.item, :image, :fill, 60, 60 %><%= cart_item.item.name %>
+        </td>
+        <td>
+          <%= cart_item.item.prise %>
+        </td>
+        <td>
+          <%= f.select :amount, *[1..3] %>
+        </td>
+        <td>
+         <%= cart_item.item.prise %>
+        </td>
+        <td>
+          <%= link_to "削除する",public_cart_item_path(cart_item), method: :delete %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to "買い物を続ける",public_homes_top_path %>
+
+<%= link_to "情報入力に進む",new_public_order_path %>
