--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div class="container" px-5 px-sm-0>
+  <div class="row">
+    <div class="col-md-3">
+      <%= attachment_image_tag @item, :image, :fill, 400, 400 %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <p>商品名：<%= @item.name %></p>
+      <p>商品説明：<%= @item.introduction %></p>
+      <p>税込価格（税抜価格）：<%= @item.prise %></p>
+
+      <%= form_with model: @item, url: public_cart_items_path, local: true do |f| %>
+        <%= f.select :amount, *[1..3] %>
+        <%= f.hidden_field :title, value: "楽しいRuby" %>
+        <%= f.submit 'カートに入れる' %>
+      <% end %>
+    </div>
+  </div>
+</div>
