--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,7 @@
 <div>
   <h3>ショッピングカート</h3>
 </div>
+<%= link_to "カートを空にする", public_cart_items_destroy_all_path, method: :delete %>
 <table class="table table-hover table-inverse">
   <thead>
    <tr>
@@ -12,6 +13,7 @@
    </tr>
   </thead>
   <tbody>
+    <% @sum = 0 %>
     <% @cart_items.each do |cart_item|%>
       <tr>
         <td>
@@ -21,11 +23,15 @@
           <%= cart_item.item.prise %>
         </td>
         <td>
-          <%= f.select :amount, *[1..3] %>
+          <%= form_with model: cart_item , url: public_cart_item_path(cart_item), local: true do |f| %>
+           <%= f.select :amount, *[1..3] %>
+           <%= f.submit "変更" %>
+          <% end %>
         </td>
         <td>
-         <%= cart_item.item.prise %>
+         <%= cart_item.item.prise * cart_item.amount %>
         </td>
+        <% @sum += cart_item.item.prise * cart_item.amount %>
         <td>
           <%= link_to "削除する",public_cart_item_path(cart_item), method: :delete %>
         </td>
@@ -33,6 +39,7 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to "買い物を続ける",public_homes_top_path %>
+合計金額 <%= @sum %></br>
+<%= link_to "買い物を続ける",public_homes_top_path %></br>
 
-<%= link_to "情報入力に進む",new_public_order_path %>
+<%= link_to "情報入力に進む",new_public_order_path %></br>
