--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,10 @@
 <h1>商品一覧</h1>
     <% @items.each do |item|%>
-        <div><%= attachment_image_tag item, :image, :fill, 100, 100 %></div>
+        <div>
+            <%= link_to public_item_path(item) do %>
+              <%= attachment_image_tag item, :image, :fill, 100, 100 %>
+            <% end %>
+        </div>
         <div><%= item.name %></div>
         <div><%= item.prise %></div>
     <% end %>
