--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,16 +1,17 @@
 <div class="container" px-5 px-sm-0>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <%= attachment_image_tag @item, :image, :fill, 400, 400 %>
     </div>
-    <div class="col-md-8 offset-md-1">
+    <div class="col-md-7 offset-md-1">
       <p>商品名：<%= @item.name %></p>
       <p>商品説明：<%= @item.introduction %></p>
       <p>税込価格（税抜価格）：<%= @item.prise %></p>
 
-      <%= form_with model: @item, url: public_cart_items_path, local: true do |f| %>
+      <%= form_with model: @cart_item, url: public_cart_items_path, local: true do |f| %>
         <%= f.select :amount, *[1..3] %>
-        <%= f.hidden_field :title, value: "楽しいRuby" %>
+        <%= f.hidden_field :item_id, value: @item.id %>
+        <%= f.hidden_field :customer_id, value: current_customer.id %>
         <%= f.submit 'カートに入れる' %>
       <% end %>
     </div>
