--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,21 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<h3>注文情報入力</h3>
+
+<%= form_with model: @order, url: public_orders_comfirm_path, local: true do |f| %>
+  <p>支払方法</p>
+  <%= f.radio_button :payment_method, "credit_card" %>
+  <%= f.label :payment_method, "クレジットカード" %>
+
+  <%= f.radio_button :payment_method, "transfer" %>
+  <%= f.label :payment_method, "銀行振込" %>
+
+  <p>お届け先</p>
+  <%= f.radio_button :payment_method, "credit_card" %>
+  <%= f.label :address, "ご自身の住所" %>
+
+  <%= f.radio_button :payment_method, "transfer" %>
+  <%= f.label :address, "登録済み住所から選択" %>
+
+  <%= f.radio_button :payment_method, "credit_card" %>
+  <%= f.label :address, "新しいお届け先" %>
+
+
