--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,19 +3,21 @@
 <%= form_with model: @order, url: public_orders_comfirm_path, local: true do |f| %>
   <p>支払方法</p>
   <%= f.radio_button :payment_method, "credit_card" %>
-  <%= f.label :payment_method, "クレジットカード" %>
+  <%= f.label :payment_method_credit_card, "クレジットカード" %>
 
   <%= f.radio_button :payment_method, "transfer" %>
-  <%= f.label :payment_method, "銀行振込" %>
+  <%= f.label :payment_method_transfer, "銀行振込" %>
 
   <p>お届け先</p>
-  <%= f.radio_button :payment_method, "credit_card" %>
-  <%= f.label :address, "ご自身の住所" %>
+  <%= radio_button_tag :order_address, 0 %>
+  <%= label_tag :order_address_0, "ご自身の住所" %>
 
-  <%= f.radio_button :payment_method, "transfer" %>
-  <%= f.label :address, "登録済み住所から選択" %>
+  <%= radio_button_tag :order_address, 1 %>
+  <%= label_tag :order_address_1, "登録済み住所から選択" %>
+  <%= f.collection_select :address, current_customer.addresses, :id, :get_full_address %>
 
-  <%= f.radio_button :payment_method, "credit_card" %>
-  <%= f.label :address, "新しいお届け先" %>
+  <%= radio_button_tag :order_address, 2 %>
+  <%= label_tag :order_address_2, "新しいお届け先" %>
+<% end %>
 
 
