--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -10,14 +10,37 @@
 
   <p>お届け先</p>
   <%= radio_button_tag :order_address, 0 %>
-  <%= label_tag :order_address_0, "ご自身の住所" %>
+  <%= label_tag :order_address_0, "ご自身の住所" %></br>
+  <%=  current_customer.postal_code %>
+  <%=  current_customer.address %></br>
+  <%=  current_customer.last_name %> <%= current_customer.first_name %></br>
 
   <%= radio_button_tag :order_address, 1 %>
-  <%= label_tag :order_address_1, "登録済み住所から選択" %>
-  <%= f.collection_select :address, current_customer.addresses, :id, :get_full_address %>
+  <%= label_tag :order_address_1, "登録済み住所から選択" %></br>
+  <%= f.collection_select :address, current_customer.addresses, :id, :get_full_address %></br>
 
   <%= radio_button_tag :order_address, 2 %>
   <%= label_tag :order_address_2, "新しいお届け先" %>
+  <table class="table table-hover table-inverse">
+   <tr>
+     <th>郵便番号(ハイフンなし)</th>
+     <td>
+      <%= f.text_field :postal_code, placeholder:"0000000" %>
+     </td>
+    </tr>
+    <tr>
+     <th>住所</th>
+     <td>
+      <%= f.text_field :address, placeholder:"東京都渋谷区代々木神園町0-0" %>
+     </td>
+    </tr>
+    <tr>
+     <th>宛名</th>
+     <td><%= f.text_field :name, placeholder:"令和　道子" %></td>
+    </tr>
+  </table>
+
+  <%= f.submit '確認画面へ進む' %>
 <% end %>
 
 
