--- a/app/views/publics/registrations/new.html.erb
+++ b/app/views/publics/registrations/new.html.erb
@@ -8,27 +8,31 @@
      <th>名前</th>
      <td>
       (姓)<%= f.text_field :last_name, placeholder:"令和" %>
-     （名）<%= f.text_field :first_name %></td>
+      (名)<%= f.text_field :first_name, placeholder:"道子" %>
+     </td>
     </tr>
     <tr>
      <th>フリガナ</th>
-     <td>(セイ)<%= f.text_field :last_name_kana %> (メイ)<%= f.text_field :first_name_kana %></td>
+     <td>
+      (セイ)<%= f.text_field :last_name_kana, placeholder:"レイワ" %>
+      (メイ)<%= f.text_field :first_name_kana, placeholder:"ミチコ" %>
+     </td>
     </tr>
     <tr>
      <th>メールアドレス</th>
-     <td><%= f.text_field :email %></td>
+     <td><%= f.text_field :email, placeholder:"sample@example.com" %></td>
     </tr>
     <tr>
      <th>郵便番号（ハイフンなし）</th>
-     <td><%= f.text_field :postal_code %></td>
+     <td><%= f.text_field :postal_code, placeholder:"0000000" %></td>
     </tr>
     <tr>
      <th>住所</th>
-     <td><%= f.text_field :address %></td>
+     <td><%= f.text_field :address, placeholder:"東京都渋谷区代々木神園町0-0" %></td>
     </tr>
     <tr>
      <th>電話番号（ハイフンなし）</th>
-     <td><%= f.text_field :telephone_number %></td>
+     <td><%= f.text_field :telephone_number, placeholder:"00000000000" %></td>
     </tr>
     <tr>
      <th>パスワード(６文字以上)</th>
