--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -46,9 +46,14 @@
     </tr>
 </table>
 <p>支払方法</p>
-<%= @order.payment_method %>
+<%= @order.payment_method_i18n %>
 <p>お届け先</p>
 <% @order.postal_code %><% @order.address %><% @order.name %>
-<%= form_with model: @order, url: public_orders_comfirm_path, local: true do |f| %>
+<%= form_with model: @order, url: public_orders_path, local: true do |f| %>
+<%= f.hidden_field :postal_code %>
+<%= f.hidden_field :address %>
+<%= f.hidden_field :name %>
+<%= f.hidden_field :total_payment, value: @sum %>
+<%= f.hidden_field :payment_method %>
  <%= f.submit '確認画面へ進む' %>
 <% end %>
