--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,12 +2,7 @@
 
 <%= form_with model: @order, url: public_orders_confirm_path, local: true do |f| %>
   <p>支払方法</p>
-  <%= f.collection_radio_button :payment_method, 0 %>
-  <%= f.label :payment_method_credit_card, "クレジットカード" %>
-
-  <%= f.radio_button :payment_method, 1 %>
-  <%= f.label :payment_method_transfer, "銀行振込" %>
-
+  <%= f.collection_radio_buttons :payment_method, Order.payment_methods_i18n, :first , :last %>
   <p>お届け先</p>
   <%= radio_button_tag :order_address, 0 %>
   <%= label_tag :order_address_0, "ご自身の住所" %></br>
