--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -34,7 +34,7 @@
 <table class="table table-hover table-inverse">
    <tr>
      <th>送料</th>
-     <td>800</td>
+     <td><%= @order.shipping_cost %></td>
    </tr>
    <tr>
      <th>商品合計</th>
@@ -42,18 +42,19 @@
     </tr>
     <tr>
      <th>請求金額</th>
-     <td><%= @sum + 800 %></td>
+     <td><%= @sum + @order.shipping_cost %></td>
     </tr>
 </table>
 <p>支払方法</p>
 <%= @order.payment_method_i18n %>
 <p>お届け先</p>
-<% @order.postal_code %><% @order.address %><% @order.name %>
+<%= @order.postal_code %><%= @order.address %><%= @order.name %>
 <%= form_with model: @order, url: public_orders_path, local: true do |f| %>
 <%= f.hidden_field :postal_code %>
 <%= f.hidden_field :address %>
 <%= f.hidden_field :name %>
 <%= f.hidden_field :total_payment, value: @sum %>
 <%= f.hidden_field :payment_method %>
+<%= f.hidden_field :shipping_cost %>
  <%= f.submit '確認画面へ進む' %>
 <% end %>
