--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,64 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<h3>注文履歴詳細</h3>
+
+<div>注文情報</div>
+<table class="table table-hover table-inverse">
+   <tr>
+     <th>注文日</th>
+     <td><%= @order.created_at %></td>
+   </tr>
+   <tr>
+     <th>配送先</th>
+     <td>
+       <%= @order.postal_code %>
+       <%= @order.address %>
+       <%= @order.name%>
+     </td>
+    </tr>
+    <tr>
+     <th>支払方法</th>
+     <td><%= @order.payment_method_i18n %></td>
+    </tr>
+</table>
+<table>
+ <tr>
+     <th>商品合計</th>
+     <td><%= @order.total_payment %></td>
+   </tr>
+   <tr>
+     <th>配送料</th>
+     <td><%= @order.shipping_cost %></td>
+    </tr>
+    <tr>
+     <th>ご請求額</th>
+     <td><%= @order.total_payment + @order.shipping_cost %></td>
+    </tr>
+</table>
+<table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+     <th>商品</th>
+     <th>単価(税込)</th>
+     <th>注文商品</th>
+     <th>個数</th>
+     <th>小計</th>
+   </tr>
+  </thead>
+  <tbody>
+    <% @order.order_detail.each do |order_detail|%>
+      <tr>
+        <td>
+          <%= order_detail.item.name %>
+        </td>
+        <td>
+          <%= order_detail.price %>
+        </td>
+        <td>
+          <%= order_detail.amount %>
+        </td>
+        <td>
+          <%= order_detail.price * order_detail.amount %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
