--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -38,13 +38,12 @@
    <tr>
      <th>商品</th>
      <th>単価(税込)</th>
-     <th>注文商品</th>
      <th>個数</th>
      <th>小計</th>
    </tr>
   </thead>
   <tbody>
-    <% @order.order_detail.each do |order_detail|%>
+    <% @order.order_details.each do |order_detail|%>
       <tr>
         <td>
           <%= order_detail.item.name %>
