--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,15 +1,22 @@
-<h4>ようこそ、ながのCAKEへ！</h4>
-<p>このサイトは、ケーキ販売のECサイトになります。</p>
-<p>会員でない方も商品の閲覧はできますが、</p>
-<p>購入には会員登録が必要になります。</p>
+<div class="bgimage">
+   <div class="bg_image-text">
+     <h4>ようこそ、ながのCAKEへ！</h4>
+     <p>このサイトは、ケーキ販売のECサイトになります。</p>
+     <p>会員でない方も商品の閲覧はできますが、</p>
+     <p>購入には会員登録が必要になります。</p>
+    </div>
+</div>
 
   <h1>新着商品</h1>
+  <div class="wrap">
     <% @items.each do |item|%>
-        <div>
+        <div class="bo">
           <%= link_to public_item_path(item) do %>
-           <%= attachment_image_tag item, :image, :fill, 60, 60 %>
+           <%= attachment_image_tag item, :image, :fill, 60, 60 %><br>
           <% end %>
         </div>
-        <div><%= item.name %></div>
+        <div><%= item.name %></div><br>
         <div><%= item.prise %></div>
     <% end %>
+  </div>
+  <%= link_to "全ての商品を見る",public_items_path %>
