--- a/app/views/publics/registrations/new.html.erb
+++ b/app/views/publics/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
   <%= render "publics/shared/error_messages", resource: resource %>
 
-  <table class="table table-hover table-inverse">
+  <table class="table table-inverse">
    <tr>
      <th>名前</th>
      <td>
@@ -44,7 +44,7 @@
     </tr>
     <tr>
       <th></th>
-      <td><%= f.submit '新規登録' %></td>
+      <td><%= f.submit '新規登録', class:"btn btn-success" %></td>
     </tr>
   </table>
 <% end %>
