--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,8 +1,8 @@
 <div>
   <h3>ショッピングカート</h3>
 </div>
-<%= link_to "カートを空にする", public_cart_items_destroy_all_path, method: :delete %>
-<table class="table table-hover table-inverse">
+<%= link_to "カートを空にする", public_cart_items_destroy_all_path, method: :delete, class:"btn btn-danger" %>
+<table border="1">
   <thead>
    <tr>
      <th>商品名</th>
@@ -17,7 +17,7 @@
     <% @cart_items.each do |cart_item|%>
       <tr>
         <td>
-          <%= attachment_image_tag cart_item.item, :image, :fill, 60, 60 %><%= cart_item.item.name %>
+          <%= attachment_image_tag cart_item.item, :image, :fill, 100, 100 %><%= cart_item.item.name %>
         </td>
         <td>
           <%= cart_item.item.prise %>
@@ -25,7 +25,7 @@
         <td>
           <%= form_with model: cart_item , url: public_cart_item_path(cart_item), local: true do |f| %>
            <%= f.select :amount, *[1..3] %>
-           <%= f.submit "変更" %>
+           <%= f.submit "変更", class:"btn btn-success" %>
           <% end %>
         </td>
         <td>
@@ -33,13 +33,20 @@
         </td>
         <% @sum += cart_item.item.prise * cart_item.amount %>
         <td>
-          <%= link_to "削除する",public_cart_item_path(cart_item), method: :delete %>
+          <%= link_to "削除する",public_cart_item_path(cart_item), method: :delete, class:"btn btn-danger" %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-合計金額 <%= @sum %></br>
-<%= link_to "買い物を続ける",public_homes_top_path %></br>
+<table border="1">
+  <th>
+    合計金額
+  </th>
+  <td>
+    <%= @sum %>
+  </td>
+</table>
+<%= link_to "買い物を続ける",public_homes_top_path, class:"btn btn-primary" %></br>
 
-<%= link_to "情報入力に進む",new_public_order_path %></br>
+<%= link_to "情報入力に進む",new_public_order_path, class:"btn btn-success" %></br>
