--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <h3>会員情報編集</h3>
 </div>
 <%= form_with model: @customer, url: public_customer_path(@customer), local: true do |f| %>
- <table class="table table-hover table-inverse">
+ <table class="table table-inverse">
    <tr>
      <th>氏名</th>
      <td><%= f.text_field :last_name %><%= f.text_field :first_name %></td>
@@ -29,7 +29,7 @@
     </tr>
     <tr>
      <th></th>
-     <td><%= f.submit '編集内容を保存' %> <%= link_to "退会する", public_customers_unsubscribe_path %></td>
+     <td><%= f.submit '編集内容を保存', class:"btn btn-success" %> <%= link_to "退会する", public_customers_unsubscribe_path, class:"btn btn-danger" %></td>
     </tr>
   </table>
 <% end %>
