--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,8 +1,8 @@
 <h3>マイページ</h3>
 
 <span>登録情報</span>
-<%= link_to "編集する", edit_public_customer_path(@customer) %>
-<table class="table table-hover table-inverse">
+<%= link_to "編集する", edit_public_customer_path(@customer), class:"btn btn-success" %>
+<table table="1">
    <tr>
      <th>氏名</th>
      <td><%= @customer.last_name %><%= @customer.first_name %></td>
@@ -31,10 +31,10 @@
 <table>
   <tr>
     <th>配送先</th>
-    <td><%= link_to "一覧を見る", public_addresses_path %></td>
+    <td><%= link_to "一覧を見る", public_addresses_path, class:"btn btn-primary" %></td>
   </tr>
   <tr>
     <th>注文履歴</th>
-   <td><%= link_to "一覧を見る", public_orders_path %></td>
+   <td><%= link_to "一覧を見る", public_orders_path, class:"btn btn-primary" %></td>
   </tr>
 </table>
