--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -12,7 +12,7 @@
         <%= f.select :amount, *[1..3] %>
         <%= f.hidden_field :item_id, value: @item.id %>
         <%= f.hidden_field :customer_id, value: current_customer.id %>
-        <%= f.submit 'カートに入れる' %>
+        <%= f.submit 'カートに入れる', class:"btn btn-success" %>
       <% end %>
     </div>
   </div>
