--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h3>注文情報確認</h3>
 </div>
-<table class="table table-hover table-inverse">
+<table border="1">
   <thead>
    <tr>
      <th>商品名</th>
@@ -15,7 +15,7 @@
     <% @cart_items.each do |cart_item| %>
       <tr>
         <td>
-          <%= attachment_image_tag cart_item.item, :image, :fill, 60, 60 %><%= cart_item.item.name %>
+          <%= attachment_image_tag cart_item.item, :image, :fill, 100, 100 %><%= cart_item.item.name %>
         </td>
         <td>
           <%= cart_item.item.prise %>
@@ -31,7 +31,7 @@
     <% end %>
   </tbody>
 </table>
-<table class="table table-hover table-inverse">
+<table border="1">
    <tr>
      <th>送料</th>
      <td><%= @order.shipping_cost %></td>
@@ -56,5 +56,5 @@
 <%= f.hidden_field :total_payment, value: @sum  %>
 <%= f.hidden_field :payment_method %>
 <%= f.hidden_field :shipping_cost, value: @order.shipping_cost %>
- <%= f.submit '確認画面へ進む' %>
+ <%= f.submit '確認画面へ進む', class:"btn btn-success" %>
 <% end %>
