--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,5 +1,5 @@
 <h1>注文履歴一覧</h1>
-<table class="table table-hover table-inverse">
+<table class="table table-inverse">
   <thead>
    <tr>
      <th>注文日</th>
