--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,12 +1,12 @@
 <div>
   <h3>注文履歴詳細</h3>
 </div>
-<table class="table table-hover table-inverse">
+<table class="table table-inverse">
    <tr>
      <th>購入者</th>
      <td>
-       <%= link_to admin_customer_path(customer) do %>
-       <%= @order.customer.last_name %><%= @order.customer.first_name %>
+       <%= link_to admin_customer_path(@customer) do %>
+       <%= @order.name %>
        <% end %>
      </td>
    </tr>
