--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -17,7 +17,7 @@
     </tr>
     <tr>
      <th></th>
-     <td><%= f.submit '変更内容を保存' %> </td>
+     <td><%= f.submit '変更内容を保存', class:"btn btn-success" %> </td>
     </tr>
   </table>
 <% end %>
