--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -2,7 +2,7 @@
   <h3>配送先登録/一覧</h3>
 </div>
 <%= form_with model: @address, url: public_addresses_path, local: true do |f| %>
- <table class="table table-hover table-inverse">
+ <table class="table table-inverse">
     <tr>
      <th>郵便番号(ハイフンなし)</th>
      <td><%= f.text_field :postal_code %></td>
@@ -17,11 +17,11 @@
     </tr>
     <tr>
      <th></th>
-     <td><%= f.submit '新規登録' %> </td>
+     <td><%= f.submit '新規登録', class:"btn btn-success" %> </td>
     </tr>
   </table>
 <% end %>
-<table class="table table-hover table-inverse">
+<table border="1">
   <thead>
    <tr>
      <th>郵便番号</th>
@@ -43,7 +43,7 @@
           <%= address.name %>
         </td>
         <td>
-         <%= link_to "編集する", edit_public_address_path(address) %> <%= link_to "削除する",public_address_path(address), method: :delete %>
+         <%= link_to "編集する", edit_public_address_path(address), class:"btn btn-success" %> <%= link_to "削除する",public_address_path(address), method: :delete, class:"btn btn-danger" %>
       </tr>
     <% end %>
   </tbody>
