--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,10 +1,10 @@
 <h3>注文履歴詳細</h3>
 
 <div>注文情報</div>
-<table class="table table-hover table-inverse">
+<table>
    <tr>
      <th>注文日</th>
-     <td><%= @order.created_at %></td>
+     <td><%= @order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
    </tr>
    <tr>
      <th>配送先</th>
@@ -33,7 +33,7 @@
      <td><%= @order.total_payment + @order.shipping_cost %></td>
     </tr>
 </table>
-<table class="table table-hover table-inverse">
+<table>
   <thead>
    <tr>
      <th>商品</th>
