--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,36 +1,36 @@
 <div>
-  <h3><%= @customer.name %>会員情報編集</h3>
+  <h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h3>
 </div>
 <%= form_with model: @customer, url: admin_customer_path(@customer), local: true do |f| %>
- <table class="table table-hover table-inverse">
+ <table class="table table-inverse">
    <tr>
      <th>会員ID</th>
      <td><%= @customer.id %></td>
    </tr>
    <tr>
      <th>氏名</th>
-     <td><%= f.text_field :@customer.last_name %><%= f.text_field :@customer.first_name %></td>
+     <td><%= f.text_field :last_name %><%= f.text_field :first_name %></td>
     </tr>
     <tr>
      <th>フリガナ</th>
-     <td><%= f.text_field :@customer.last_name_kana %><%= f.text_field :@customer.first_name_kana %></td>
+     <td><%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana %></td>
     </tr>
     <tr>
      <th>郵便番号</th>
-     <td><%= f.text_field :@customer.postal_code %></td>
+     <td><%= f.text_field :postal_code %></td>
     </tr>
     <tr>
      <th>住所</th>
-     <td><%= f.text_field :@customer.address %></td>
+     <td><%= f.text_field :address %></td>
     </tr>
     <tr>
      <th>電話番号</th>
-     <td><%= f.text_field :@customer.telephone_number %></td>
+     <td><%= f.text_field :telephone_number %></td>
     </tr>
     <tr>
      <th>メールアドレス</th>
-     <td><%= f.text_field :@customer.email %></td>
+     <td><%= f.text_field :email %></td>
     </tr>
-    <%= f.submit '変更を保存' %>
   </table>
+  <%= f.submit '変更を保存', class:"btn btn-success" %>
 <% end %>
