--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -15,7 +15,7 @@
         </td>
         <td>
           <%= link_to admin_customer_path(customer) do %>
-            <%= attachment_image_tag customer, :customer,format:'jpeg', :size=>'50x50' %>
+            <%= customer.last_name %><%= customer.first_name %>
           <% end %>
         </td>
         <td>
