--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div>
-  <h3><%= @customer.name %>さんの会員詳細</h3>
+  <h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
 </div>
-<table class="table table-hover table-inverse">
+<table>
    <tr>
      <th>会員ID</th>
      <td><%= @customer.id %></td>
@@ -30,6 +30,6 @@
      <th>メールアドレス</th>
      <td><%= @customer.email %></td>
     </tr>
-    <%= link_to "編集する", edit_admin_customer_path(@customer), class:"fas fa-home nav-link text-light"  %>
-    <%= link_to "注文履歴一覧を見る", admin_item_path(@customer), class:"fas fa-home nav-link text-light"  %>
 </table>
+<%= link_to "編集する", edit_admin_customer_path(@customer), class:"btn btn-success"  %>
+<%= link_to "注文履歴一覧を見る", admin_item_path(@customer), class:"btn btn-primary"  %>
