--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -9,5 +9,5 @@
   <%= f.text_area :introduction %>
   <h4>税抜価格</h4>
   <%= f.text_field :prise %>円
-  <%= f.submit '変更を保存' %>
+  <%= f.submit '変更を保存', class:"btn btn-success" %>
 <% end %>
