--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,5 +1,6 @@
-<table class="table table-hover table-inverse">
+<table class="table table-inverse">
   <h1>商品一覧</h1>
+  <%= link_to "商品新規登録", new_admin_item_path %>
   <thead>
    <tr>
      <th>商品ID</th>
