--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,7 +1,14 @@
-<div>
-  <%= attachment_image_tag @item, :image, :fill, 60, 60 %>
-  <p>商品名：<%= @item.name %></p>
-  <p>商品説明：<%= @item.introduction %></p>
-  <p>税込価格（税抜価格）：<%= @item.prise %></p>
-  <%= link_to "編集", edit_admin_item_path, class:"fas fa-home nav-link"  %>
+<h2>商品詳細</h2>
+<div class="container" px-5 px-sm-0>
+  <div class="row">
+    <div class="col-md-4">
+      <%= attachment_image_tag @item, :image, :fill, 400, 400 %>
+    </div>
+    <div class="col-md-7 offset-md-1">
+  　　　<p>商品名：<%= @item.name %></p>
+  　   <p>商品説明：<%= @item.introduction %></p>
+      <p>税込価格（税抜価格）：<%= @item.prise %></p>
+      <%= link_to "編集する", edit_admin_item_path, class:"btn btn-success"  %>
+    </div>
+  </div>
 </div>
