--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -29,7 +29,7 @@
           <%= order.total_payment + order.shipping_cost %>
         </td>
         <td>
-         <%= link_to "表示する", public_order_path(order) %>
+         <%= link_to "表示する", public_order_path(order), class:"btn btn-primary" %>
         </td>
       </tr>
     <% end %>
