--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -6,7 +6,10 @@
     text-align: center;
     background-repeat:  no-repeat;
     width:auto;
-    height:800pX;
+    background-size: cover;
+     background-position: center;
+     height: 300px;
+
 }
 
 .bg_image-text {
