--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -12,15 +12,19 @@
    </tr>
    <tr>
      <th>注文日</th>
-     <td><%= @order.created_at %></td>
+     <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
     </tr>
     <tr>
      <th>配送先</th>
-     <td><%= @order.postal_code %><%= @order.address %><%= @order.name %></td>
+     <td>
+        〒<%= @order.postal_code %><br>
+        <%= @order.address %><br>
+        <%= @order.name %>
+    </td>
     </tr>
     <tr>
      <th>支払方法</th>
-     <td><%= @order.payment_method %></td>
+     <td><%= @order.payment_method_i18n %></td>
     </tr>
 </table>
 <table class="table table-hover table-inverse">
@@ -50,7 +54,7 @@
     <% end %>
   </tbody>
 </table>
-<table class="table table-hover table-inverse">
+<table>
    <tr>
      <th>商品合計</th>
      <td>
