--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h3>会員情報編集</h3>
 </div>
-<%= form_with model: @customer, url: public_customer_path(@customer), local: true do |f| %>
+<%= form_with model: @customer, url: public_customers_path, local: true do |f| %>
  <table class="table table-inverse">
    <tr>
      <th>氏名</th>
