--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <h3>マイページ</h3>
 
 <span>登録情報</span>
-<%= link_to "編集する", edit_public_customer_path(@customer), class:"btn btn-success" %>
+<%= link_to "編集する", edit_public_customers_path, class:"btn btn-success" %>
 <table table="1">
    <tr>
      <th>氏名</th>
