--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -4,5 +4,5 @@
 <p>これまでの購入履歴が閲覧できなくなります。</p>
 <p>退会する場合は、「退会する」をクリックしてください。</p>
 
-<%= link_to "退会しない", public_customer_path(current_customer), class:"btn btn-primary" %>
+<%= link_to "退会しない", public_customers_path, class:"btn btn-primary" %>
 <%= link_to "退会する", public_customers_withdraw_path, method: :patch, data:{confirm: "本当に退会しますか？"}, class:"btn btn-danger" %>
