--- a/app/views/publics/registrations/new.html.erb
+++ b/app/views/publics/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>新規会員登録</h2>
 
-<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+<%= form_with model: Customer.new, url: customer_registration_path, local: true do |f| %>
   <%= render "publics/shared/error_messages", resource: resource %>
 
   <table class="table table-inverse">
